--- a/lib/style.css
+++ b/lib/style.css
@@ -1,9 +1,3 @@
-/* Rappels utiles
-    #name : pour les id
-    .name : pour les class
-    top right bottom left : pour les marging et padding
-*/
-
 /* éléments de la page */
 body 
     {
@@ -174,7 +168,7 @@ aside, footer
 {
     background-color: #F2F2F2;
     margin: 0;
-    padding: 25px 0 25px;
+    padding: 20px 0 20px;
 }
 
 .popular_room
@@ -284,3 +278,36 @@ aside, footer
         max-height: 125px;
         overflow: hidden;
     }    
+/* haut | droit | bas | gauche */
+
+
+    /* FOOTER  */
+footer {
+    background-color: #F2F2F2;
+    padding: 20px 0 20px 0;
+}
+#links h2 {
+    font-size: 1em; 
+}
+#links ul {
+    padding: 0;
+    margin: 25px;
+}
+#links li {
+    font-size: 0.9em;
+    line-height: 2em;
+}
+
+@media screen and (min-width: 900px) {
+    footer {
+        padding: 25px 0 50px 0;
+    }
+    #links {
+        display: flex;
+        flex-basis: auto;
+    }
+    #links ul {
+        margin: 0 50px 0 50px;
+        flex-grow: 1;
+    }
+}
